[gd_scene load_steps=3 format=3 uid="uid://dx8mk7obesyvx"]

[ext_resource type="Script" path="res://laser_beam.gd" id="1_e73pa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sntyk"]
size = Vector2(29.0962, 2)

[node name="laser_beam" type="RayCast2D"]
target_position = Vector2(1500, 0)
collision_mask = 2
script = ExtResource("1_e73pa")
laser_width = 1
damage = 0

[node name="Line2D" type="Line2D" parent="."]
scale = Vector2(0.876, 0.14)
points = PackedVector2Array(0, 0, 1500, 0)
default_color = Color(0.752941, 0, 0, 0.278431)

[node name="laser_line_lifetime" type="Timer" parent="."]
wait_time = 0.05

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(10.1385, 0)
scale = Vector2(0.696896, 0.696896)
shape = SubResource("RectangleShape2D_sntyk")

[connection signal="timeout" from="laser_line_lifetime" to="." method="_on_laser_line_lifetime_timeout"]
